completed initial text for data analysis and differential cross-section
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@9332 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/data_taking.tex
+++ b/2013/1km paper/data_taking.tex
@@ -71,7 +71,10 @@ trigger (activity in either arm of T1 or T2), double-arm proton trigger
 \begin{center}
 \includegraphics[width=16cm]{fig/overview.pdf}
 \vskip-3mm
-\caption{Illustration of the beam conditions. The T2 rate is roughly proportional to luminosity. The RP rate is sensitive to luminosity plus beam-halo. The pile-up probability follows the intensity of beam-halo protons. \todo{need the bottom part?}}
+\caption{%
+Illustration of the beam conditions. The T2 rate is roughly proportional to luminosity. The RP rate is sensitive to luminosity plus beam-halo.
+%The pile-up probability follows the intensity of beam-halo protons.
+}
 \label{fig:overview}
 \end{center}
 \end{figure*}
