--- a/2013/1km paper/data_table.tex
+++ b/2013/1km paper/data_table.tex
@@ -9,8 +9,9 @@
 \begin{table*}
 \vskip-5mm
 \caption{%
-\todo{TODO}: The elastic differential cross-section as determined in this analysis. The left-most three columns describe bins in $t$. The representative point give the $t$ value suitable for fitting \cite{lafferty94}.
+The elastic differential cross-section as determined in this analysis. The representative point of a bin gives the $t$ value suitable for fitting \cite{lafferty94}.
 %uncertainty due to different fit models negligible:$10^{-7}\un{GeV^2}$
+For the differential cross-section, its value, statistical and systematic uncertainty (including all sources) are reported, followed by details of the leading systematic contributions: normalisation, optics imperfections (two eigenvectors of covariance matrix for factors scaling $\theta_x^*$ and $\theta_y^*$), beam momentum offset and residual misalignment (horizontal and vertical). Given these vectors $\vec v_i$, the covariance matrix of the differential cross-section can be constructed as $\sum \vec v_i \vec v_i^{\rm T}$.
 \todo{UPDATE points at the end}
 }
 \vskip-3mm
@@ -24,15 +25,15 @@
 \hline
 \tableHeader
 \hline
-$0.000590$ & $0.000666$ & $0.000632$ & $1040.\S\S$ & $140.\S\S$ & $78.3\S$ & $+41.6\S$ & $+6.11\S$ & $-0.465$ & $-0.324$ & $-1.95\S$ & $-60.9\S\S$ \cr
+$0.000600$ & $0.000666$ & $0.000632$ & $1040.\S\S$ & $140.\S\S$ & $78.3\S$ & $+41.6\S$ & $+6.11\S$ & $-0.465$ & $-0.324$ & $-1.95\S$ & $-60.9\S\S$ \cr
 $0.000666$ & $0.000735$ & $0.000699$ & $\S995.\S\S$ & $\S96.1\S$ & $61.6\S$ & $+37.3\S$ & $+4.69\S$ & $-0.248$ & $-0.085$ & $-1.08\S$ & $-46.2\S\S$ \cr
-$0.000735$ & $0.000807$ & $0.000760$ & $\S998.\S\S$ & $\S83.0\S$ & $50.4\S$ & $+34.1\S$ & $+3.70\S$ & $-0.085$ & $+0.099$ & $-0.602$ & $-35.7\S\S$ \cr
+$0.000735$ & $0.000807$ & $0.000770$ & $\S998.\S\S$ & $\S83.0\S$ & $50.4\S$ & $+34.1\S$ & $+3.70\S$ & $-0.085$ & $+0.099$ & $-0.602$ & $-35.7\S\S$ \cr
 $0.000807$ & $0.000884$ & $0.000845$ & $\S711.\S\S$ & $\S59.3\S$ & $42.6\S$ & $+31.6\S$ & $+2.95\S$ & $+0.045$ & $+0.248$ & $-0.299$ & $-27.8\S\S$ \cr
 $0.000884$ & $0.000963$ & $0.000923$ & $\S752.\S\S$ & $\S56.9\S$ & $37.1\S$ & $+29.6\S$ & $+2.39\S$ & $+0.148$ & $+0.370$ & $-0.119$ & $-21.7\S\S$ \cr
-$0.000963$ & $0.00105\S$ & $0.00100\S$ & $\S720.\S\S$ & $\S52.0\S$ & $33.1\S$ & $+28.0\S$ & $+1.98\S$ & $+0.230$ & $+0.467$ & $-0.022$ & $-17.1\S\S$ \cr
+$0.000963$ & $0.00105\S$ & $0.00100\S$ & $\S720.\S\S$ & $\S52.0\S$ & $33.1\S$ & $+28.0\S$ & $+1.98\S$ & $+0.230$ & $+0.467$ & $-0.022$ & $-17.2\S\S$ \cr
 $0.00105\S$ & $0.00113\S$ & $0.00109\S$ & $\S627.\S\S$ & $\S44.7\S$ & $30.3\S$ & $+26.8\S$ & $+1.68\S$ & $+0.294$ & $+0.544$ & $+0.030$ & $-13.8\S\S$ \cr
 $0.00113\S$ & $0.00122\S$ & $0.00118\S$ & $\S620.\S\S$ & $\S42.0\S$ & $28.3\S$ & $+25.8\S$ & $+1.44\S$ & $+0.346$ & $+0.609$ & $+0.057$ & $-11.2\S\S$ \cr
-$0.00122\S$ & $0.00132\S$ & $0.00127\S$ & $\S572.\S\S$ & $\S38.7\S$ & $26.7\S$ & $+25.0\S$ & $+1.26\S$ & $+0.389$ & $+0.662$ & $+0.070$ & $-\S9.00\S$ \cr
+$0.00122\S$ & $0.00132\S$ & $0.00127\S$ & $\S572.\S\S$ & $\S38.7\S$ & $26.7\S$ & $+25.0\S$ & $+1.26\S$ & $+0.389$ & $+0.662$ & $+0.070$ & $-\S9.10\S$ \cr
 $0.00132\S$ & $0.00141\S$ & $0.00136\S$ & $\S630.\S\S$ & $\S39.0\S$ & $25.5\S$ & $+24.3\S$ & $+1.11\S$ & $+0.424$ & $+0.706$ & $+0.073$ & $-\S7.47\S$ \cr
 $0.00141\S$ & $0.00152\S$ & $0.00146\S$ & $\S639.\S\S$ & $\S38.2\S$ & $24.6\S$ & $+23.8\S$ & $+1.00\S$ & $+0.453$ & $+0.743$ & $+0.070$ & $-\S6.17\S$ \cr
 $0.00152\S$ & $0.00162\S$ & $0.00157\S$ & $\S567.\S\S$ & $\S35.1\S$ & $24.0\S$ & $+23.3\S$ & $+0.915$ & $+0.477$ & $+0.773$ & $+0.065$ & $-\S5.14\S$ \cr
@@ -40,7 +41,7 @@ $0.00162\S$ & $0.00173\S$ & $0.00167\S$ & $\S506.\S\S$ & $\S31.2\S$ & $23.4\S$ &
 $0.00173\S$ & $0.00184\S$ & $0.00178\S$ & $\S497.\S\S$ & $\S30.2\S$ & $23.0\S$ & $+22.6\S$ & $+0.789$ & $+0.513$ & $+0.819$ & $+0.052$ & $-\S3.65\S$ \cr
 $0.00184\S$ & $0.00195\S$ & $0.00190\S$ & $\S536.\S\S$ & $\S30.6\S$ & $22.6\S$ & $+22.3\S$ & $+0.744$ & $+0.526$ & $+0.836$ & $+0.046$ & $-\S3.11\S$ \cr
 $0.00195\S$ & $0.00207\S$ & $0.00201\S$ & $\S536.\S\S$ & $\S29.8\S$ & $22.3\S$ & $+22.1\S$ & $+0.708$ & $+0.537$ & $+0.851$ & $+0.043$ & $-\S2.66\S$ \cr
-$0.00207\S$ & $0.00220\S$ & $0.00213\S$ & $\S535.\S\S$ & $\S28.4\S$ & $22.1\S$ & $+21.9\S$ & $+0.677$ & $+0.547$ & $+0.862$ & $+0.033$ & $-\S2.30\S$ \cr
+$0.00207\S$ & $0.00220\S$ & $0.00214\S$ & $\S535.\S\S$ & $\S28.4\S$ & $22.1\S$ & $+21.9\S$ & $+0.677$ & $+0.547$ & $+0.862$ & $+0.033$ & $-\S2.30\S$ \cr
 $0.00220\S$ & $0.00235\S$ & $0.00228\S$ & $\S528.\S\S$ & $\S25.7\S$ & $21.9\S$ & $+21.7\S$ & $+0.651$ & $+0.554$ & $+0.873$ & $+0.027$ & $-\S1.98\S$ \cr
 $0.00235\S$ & $0.00253\S$ & $0.00244\S$ & $\S463.\S\S$ & $\S22.1\S$ & $21.6\S$ & $+21.5\S$ & $+0.627$ & $+0.561$ & $+0.881$ & $+0.021$ & $-\S1.70\S$ \cr
 $0.00253\S$ & $0.00274\S$ & $0.00263\S$ & $\S541.\S\S$ & $\S21.9\S$ & $21.4\S$ & $+21.3\S$ & $+0.606$ & $+0.566$ & $+0.888$ & $+0.015$ & $-\S1.45\S$ \cr
@@ -52,42 +53,42 @@ $0.00404\S$ & $0.00455\S$ & $0.00429\S$ & $\S498.\S\S$ & $\S10.6\S$ & $20.4\S$ &
 $0.00455\S$ & $0.00509\S$ & $0.00482\S$ & $\S484.\S\S$ & $\S\S9.76$ & $20.2\S$ & $+20.2\S$ & $+0.571$ & $+0.553$ & $+0.866$ & $-0.008$ & $-\S0.186$ \cr
 $0.00509\S$ & $0.00567\S$ & $0.00538\S$ & $\S483.\S\S$ & $\S\S9.26$ & $20.0\S$ & $+19.9\S$ & $+0.564$ & $+0.543$ & $+0.850$ & $-0.009$ & $-\S0.155$ \cr
 $0.00567\S$ & $0.00627\S$ & $0.00597\S$ & $\S468.\S\S$ & $\S\S8.70$ & $19.8\S$ & $+19.7\S$ & $+0.557$ & $+0.532$ & $+0.832$ & $-0.006$ & $-\S0.129$ \cr
-$0.00627\S$ & $0.00691\S$ & $0.00659\S$ & $\S466.\S\S$ & $\S\S8.33$ & $19.5\S$ & $+19.5\S$ & $+0.549$ & $+0.520$ & $+0.814$ & $-0.000$ & $-\S0.116$ \cr
-$0.00691\S$ & $0.00758\S$ & $0.00724\S$ & $\S461.\S\S$ & $\S\S7.96$ & $19.3\S$ & $+19.2\S$ & $+0.541$ & $+0.506$ & $+0.793$ & $-0.000$ & $-\S0.105$ \cr
+$0.00627\S$ & $0.00691\S$ & $0.00659\S$ & $\S466.\S\S$ & $\S\S8.33$ & $19.5\S$ & $+19.5\S$ & $+0.549$ & $+0.520$ & $+0.814$ & $-0.001$ & $-\S0.116$ \cr
+$0.00691\S$ & $0.00758\S$ & $0.00724\S$ & $\S461.\S\S$ & $\S\S7.96$ & $19.3\S$ & $+19.2\S$ & $+0.541$ & $+0.506$ & $+0.793$ & $-0.001$ & $-\S0.105$ \cr
 $0.00758\S$ & $0.00828\S$ & $0.00793\S$ & $\S453.\S\S$ & $\S\S7.61$ & $19.0\S$ & $+19.0\S$ & $+0.534$ & $+0.491$ & $+0.771$ & $-0.006$ & $-\S0.092$ \cr
-$0.00828\S$ & $0.00901\S$ & $0.00863\S$ & $\S450.\S\S$ & $\S\S7.35$ & $18.6\S$ & $+18.6\S$ & $+0.525$ & $+0.477$ & $+0.749$ & $-0.000$ & $-\S0.087$ \cr
-$0.00901\S$ & $0.00977\S$ & $0.00939\S$ & $\S447.\S\S$ & $\S\S7.09$ & $18.5\S$ & $+18.4\S$ & $+0.516$ & $+0.461$ & $+0.725$ & $-0.000$ & $-\S0.081$ \cr
-$0.00977\S$ & $0.0106\S\S$ & $0.0102\S\S$ & $\S437.\S\S$ & $\S\S6.82$ & $18.1\S$ & $+18.1\S$ & $+0.507$ & $+0.446$ & $+0.702$ & $-0.003$ & $-\S0.069$ \cr
+$0.00828\S$ & $0.00901\S$ & $0.00864\S$ & $\S450.\S\S$ & $\S\S7.35$ & $18.7\S$ & $+18.7\S$ & $+0.525$ & $+0.477$ & $+0.749$ & $-0.001$ & $-\S0.087$ \cr
+$0.00901\S$ & $0.00977\S$ & $0.00939\S$ & $\S447.\S\S$ & $\S\S7.09$ & $18.5\S$ & $+18.4\S$ & $+0.516$ & $+0.461$ & $+0.725$ & $-0.001$ & $-\S0.081$ \cr
+$0.00977\S$ & $0.0106\S\S$ & $0.0102\S\S$ & $\S437.\S\S$ & $\S\S6.82$ & $18.2\S$ & $+18.2\S$ & $+0.507$ & $+0.446$ & $+0.702$ & $-0.003$ & $-\S0.069$ \cr
 $0.0106\S\S$ & $0.0114\S\S$ & $0.0110\S\S$ & $\S426.\S\S$ & $\S\S6.56$ & $17.9\S$ & $+17.9\S$ & $+0.497$ & $+0.430$ & $+0.677$ & $-0.009$ & $-\S0.069$ \cr
-$0.0114\S\S$ & $0.0123\S\S$ & $0.0117\S\S$ & $\S416.\S\S$ & $\S\S6.20$ & $17.6\S$ & $+17.6\S$ & $+0.487$ & $+0.414$ & $+0.652$ & $-0.004$ & $-\S0.060$ \cr
+$0.0114\S\S$ & $0.0123\S\S$ & $0.0118\S\S$ & $\S416.\S\S$ & $\S\S6.30$ & $17.6\S$ & $+17.6\S$ & $+0.487$ & $+0.414$ & $+0.652$ & $-0.004$ & $-\S0.060$ \cr
 $0.0123\S\S$ & $0.0131\S\S$ & $0.0127\S\S$ & $\S415.\S\S$ & $\S\S6.14$ & $17.3\S$ & $+17.3\S$ & $+0.476$ & $+0.398$ & $+0.627$ & $-0.007$ & $-\S0.059$ \cr
 $0.0131\S\S$ & $0.0141\S\S$ & $0.0136\S\S$ & $\S397.\S\S$ & $\S\S5.87$ & $17.0\S$ & $+17.0\S$ & $+0.465$ & $+0.381$ & $+0.601$ & $-0.006$ & $-\S0.055$ \cr
-$0.0141\S\S$ & $0.0150\S\S$ & $0.0145\S\S$ & $\S393.\S\S$ & $\S\S5.71$ & $16.6\S$ & $+16.6\S$ & $+0.454$ & $+0.364$ & $+0.575$ & $-0.007$ & $-\S0.052$ \cr
+$0.0141\S\S$ & $0.0150\S\S$ & $0.0145\S\S$ & $\S393.\S\S$ & $\S\S5.71$ & $16.7\S$ & $+16.6\S$ & $+0.454$ & $+0.364$ & $+0.575$ & $-0.007$ & $-\S0.052$ \cr
 $0.0150\S\S$ & $0.0160\S\S$ & $0.0155\S\S$ & $\S401.\S\S$ & $\S\S5.65$ & $16.4\S$ & $+16.3\S$ & $+0.442$ & $+0.348$ & $+0.550$ & $-0.006$ & $-\S0.049$ \cr
 $0.0160\S\S$ & $0.0170\S\S$ & $0.0165\S\S$ & $\S391.\S\S$ & $\S\S5.47$ & $16.0\S$ & $+16.0\S$ & $+0.430$ & $+0.331$ & $+0.524$ & $-0.006$ & $-\S0.046$ \cr
 $0.0170\S\S$ & $0.0181\S\S$ & $0.0175\S\S$ & $\S385.\S\S$ & $\S\S5.32$ & $15.7\S$ & $+15.7\S$ & $+0.418$ & $+0.314$ & $+0.498$ & $-0.006$ & $-\S0.043$ \cr
 $0.0181\S\S$ & $0.0191\S\S$ & $0.0186\S\S$ & $\S367.\S\S$ & $\S\S5.09$ & $15.4\S$ & $+15.3\S$ & $+0.405$ & $+0.298$ & $+0.472$ & $-0.006$ & $-\S0.041$ \cr
 $0.0191\S\S$ & $0.0203\S\S$ & $0.0197\S\S$ & $\S366.\S\S$ & $\S\S4.99$ & $15.0\S$ & $+15.0\S$ & $+0.393$ & $+0.281$ & $+0.447$ & $-0.003$ & $-\S0.036$ \cr
 $0.0203\S\S$ & $0.0214\S\S$ & $0.0208\S\S$ & $\S355.\S\S$ & $\S\S4.84$ & $14.7\S$ & $+14.7\S$ & $+0.380$ & $+0.265$ & $+0.421$ & $-0.006$ & $-\S0.036$ \cr
-$0.0214\S\S$ & $0.0226\S\S$ & $0.0220\S\S$ & $\S344.\S\S$ & $\S\S4.67$ & $14.3\S$ & $+14.3\S$ & $+0.367$ & $+0.249$ & $+0.397$ & $-0.002$ & $-\S0.032$ \cr
+$0.0214\S\S$ & $0.0226\S\S$ & $0.0220\S\S$ & $\S344.\S\S$ & $\S\S4.68$ & $14.3\S$ & $+14.3\S$ & $+0.367$ & $+0.249$ & $+0.397$ & $-0.002$ & $-\S0.032$ \cr
 $0.0226\S\S$ & $0.0238\S\S$ & $0.0232\S\S$ & $\S337.\S\S$ & $\S\S4.56$ & $14.0\S$ & $+14.0\S$ & $+0.354$ & $+0.233$ & $+0.371$ & $-0.005$ & $-\S0.033$ \cr
 $0.0238\S\S$ & $0.0250\S\S$ & $0.0244\S\S$ & $\S329.\S\S$ & $\S\S4.44$ & $13.7\S$ & $+13.6\S$ & $+0.341$ & $+0.217$ & $+0.346$ & $-0.002$ & $-\S0.029$ \cr
 $0.0250\S\S$ & $0.0263\S\S$ & $0.0257\S\S$ & $\S316.\S\S$ & $\S\S4.28$ & $13.3\S$ & $+13.3\S$ & $+0.328$ & $+0.201$ & $+0.322$ & $-0.004$ & $-\S0.029$ \cr
 $0.0263\S\S$ & $0.0276\S\S$ & $0.0270\S\S$ & $\S314.\S\S$ & $\S\S4.20$ & $13.0\S$ & $+13.0\S$ & $+0.315$ & $+0.186$ & $+0.299$ & $-0.006$ & $-\S0.029$ \cr
 $0.0276\S\S$ & $0.0289\S\S$ & $0.0283\S\S$ & $\S309.\S\S$ & $\S\S4.11$ & $12.6\S$ & $+12.6\S$ & $+0.302$ & $+0.171$ & $+0.275$ & $-0.003$ & $-\S0.025$ \cr
-$0.0289\S\S$ & $0.0303\S\S$ & $0.0296\S\S$ & $\S298.\S\S$ & $\S\S3.98$ & $12.3\S$ & $+12.3\S$ & $+0.280$ & $+0.156$ & $+0.252$ & $-0.003$ & $-\S0.024$ \cr
+$0.0289\S\S$ & $0.0303\S\S$ & $0.0296\S\S$ & $\S298.\S\S$ & $\S\S3.98$ & $12.3\S$ & $+12.3\S$ & $+0.290$ & $+0.156$ & $+0.252$ & $-0.003$ & $-\S0.024$ \cr
 $0.0303\S\S$ & $0.0317\S\S$ & $0.0310\S\S$ & $\S288.\S\S$ & $\S\S3.86$ & $12.0\S$ & $+12.0\S$ & $+0.276$ & $+0.142$ & $+0.230$ & $-0.006$ & $-\S0.025$ \cr
-$0.0317\S\S$ & $0.0331\S\S$ & $0.0323\S\S$ & $\S276.\S\S$ & $\S\S3.73$ & $11.6\S$ & $+11.6\S$ & $+0.264$ & $+0.128$ & $+0.209$ & $-0.004$ & $-\S0.022$ \cr
-$0.0331\S\S$ & $0.0345\S\S$ & $0.0339\S\S$ & $\S272.\S\S$ & $\S\S3.65$ & $11.3\S$ & $+11.3\S$ & $+0.252$ & $+0.115$ & $+0.189$ & $-0.000$ & $-\S0.019$ \cr
-$0.0345\S\S$ & $0.0361\S\S$ & $0.0353\S\S$ & $\S269.\S\S$ & $\S\S3.59$ & $11.0\S$ & $+11.0\S$ & $+0.239$ & $+0.102$ & $+0.167$ & $-0.003$ & $-\S0.020$ \cr
+$0.0317\S\S$ & $0.0331\S\S$ & $0.0324\S\S$ & $\S276.\S\S$ & $\S\S3.73$ & $11.6\S$ & $+11.6\S$ & $+0.264$ & $+0.128$ & $+0.209$ & $-0.004$ & $-\S0.022$ \cr
+$0.0331\S\S$ & $0.0346\S\S$ & $0.0339\S\S$ & $\S272.\S\S$ & $\S\S3.65$ & $11.3\S$ & $+11.3\S$ & $+0.252$ & $+0.115$ & $+0.189$ & $-0.000$ & $-\S0.019$ \cr
+$0.0346\S\S$ & $0.0361\S\S$ & $0.0353\S\S$ & $\S269.\S\S$ & $\S\S3.59$ & $11.0\S$ & $+11.0\S$ & $+0.239$ & $+0.102$ & $+0.167$ & $-0.003$ & $-\S0.020$ \cr
 $0.0361\S\S$ & $0.0376\S\S$ & $0.0369\S\S$ & $\S251.\S\S$ & $\S\S3.42$ & $10.6\S$ & $+10.6\S$ & $+0.227$ & $+0.089$ & $+0.148$ & $-0.005$ & $-\S0.020$ \cr
-$0.0376\S\S$ & $0.0391\S\S$ & $0.0384\S\S$ & $\S249.\S\S$ & $\S\S3.37$ & $10.3\S$ & $+10.3\S$ & $+0.216$ & $+0.077$ & $+0.129$ & $-0.000$ & $-\S0.016$ \cr
-$0.0391\S\S$ & $0.0408\S\S$ & $0.0400\S\S$ & $\S239.\S\S$ & $\S\S3.27$ & $\S9.99$ & $+\S9.99$ & $+0.205$ & $+0.066$ & $+0.112$ & $+0.000$ & $-\S0.015$ \cr
+$0.0376\S\S$ & $0.0392\S\S$ & $0.0384\S\S$ & $\S249.\S\S$ & $\S\S3.37$ & $10.3\S$ & $+10.3\S$ & $+0.216$ & $+0.077$ & $+0.129$ & $-0.000$ & $-\S0.016$ \cr
+$0.0392\S\S$ & $0.0408\S\S$ & $0.0400\S\S$ & $\S239.\S\S$ & $\S\S3.27$ & $\S9.99$ & $+\S9.99$ & $+0.205$ & $+0.066$ & $+0.112$ & $+0.000$ & $-\S0.015$ \cr
 $0.0408\S\S$ & $0.0424\S\S$ & $0.0416\S\S$ & $\S234.\S\S$ & $\S\S3.21$ & $\S9.68$ & $+\S9.67$ & $+0.209$ & $+0.054$ & $+0.093$ & $+0.026$ & $-\S0.012$ \cr
-$0.0424\S\S$ & $0.0441\S\S$ & $0.0432\S\S$ & $\S223.\S\S$ & $\S\S3.13$ & $\S9.35$ & $+\S9.35$ & $+0.217$ & $+0.042$ & $+0.076$ & $+0.059$ & $-\S0.008$ \cr
+$0.0424\S\S$ & $0.0441\S\S$ & $0.0432\S\S$ & $\S223.\S\S$ & $\S\S3.13$ & $\S9.36$ & $+\S9.36$ & $+0.217$ & $+0.042$ & $+0.076$ & $+0.059$ & $-\S0.008$ \cr
 $0.0441\S\S$ & $0.0457\S\S$ & $0.0449\S\S$ & $\S220.\S\S$ & $\S\S3.11$ & $\S9.06$ & $+\S9.06$ & $+0.231$ & $+0.030$ & $+0.059$ & $+0.104$ & $-\S0.007$ \cr
 $0.0457\S\S$ & $0.0475\S\S$ & $0.0466\S\S$ & $\S214.\S\S$ & $\S\S3.06$ & $\S8.76$ & $+\S8.75$ & $+0.241$ & $+0.019$ & $+0.044$ & $+0.142$ & $-\S0.007$ \cr
-$0.0475\S\S$ & $0.0492\S\S$ & $0.0483\S\S$ & $\S206.\S\S$ & $\S\S3.00$ & $\S8.46$ & $+\S8.46$ & $+0.248$ & $+0.000$ & $+0.030$ & $+0.174$ & $-\S0.006$ \cr
+$0.0475\S\S$ & $0.0492\S\S$ & $0.0483\S\S$ & $\S206.\S\S$ & $\S\S3.00$ & $\S8.46$ & $+\S8.46$ & $+0.248$ & $+0.001$ & $+0.030$ & $+0.174$ & $-\S0.006$ \cr
 $0.0492\S\S$ & $0.0510\S\S$ & $0.0501\S\S$ & $\S200.\S\S$ & $\S\S2.95$ & $\S8.17$ & $+\S8.17$ & $+0.254$ & $-0.000$ & $+0.015$ & $+0.203$ & $-\S0.005$ \cr
 \hline
 \hline
@@ -117,41 +118,41 @@ $0.0547\S\S$ & $0.0565\S\S$ & $0.0556\S\S$ & $\S179.\S\S$ & $\S\S2.77$ & $\S7.34
 $0.0565\S\S$ & $0.0585\S\S$ & $0.0575\S\S$ & $\S164.\S\S$ & $\S\S2.64$ & $\S7.07$ & $+\S7.06$ & $+0.257$ & $-0.033$ & $-0.033$ & $+0.277$ & $-\S0.005$ \cr
 $0.0585\S\S$ & $0.0604\S\S$ & $0.0594\S\S$ & $\S161.\S\S$ & $\S\S2.60$ & $\S6.81$ & $+\S6.80$ & $+0.256$ & $-0.041$ & $-0.045$ & $+0.291$ & $-\S0.004$ \cr
 $0.0604\S\S$ & $0.0624\S\S$ & $0.0614\S\S$ & $\S162.\S\S$ & $\S\S2.60$ & $\S6.55$ & $+\S6.54$ & $+0.253$ & $-0.046$ & $-0.054$ & $+0.301$ & $-\S0.004$ \cr
-$0.0624\S\S$ & $0.0644\S\S$ & $0.0634\S\S$ & $\S149.\S\S$ & $\S\S2.49$ & $\S6.20$ & $+\S6.29$ & $+0.250$ & $-0.053$ & $-0.064$ & $+0.310$ & $-\S0.004$ \cr
+$0.0624\S\S$ & $0.0644\S\S$ & $0.0634\S\S$ & $\S149.\S\S$ & $\S\S2.49$ & $\S6.30$ & $+\S6.29$ & $+0.250$ & $-0.053$ & $-0.064$ & $+0.310$ & $-\S0.004$ \cr
 $0.0644\S\S$ & $0.0664\S\S$ & $0.0654\S\S$ & $\S143.\S\S$ & $\S\S2.42$ & $\S6.06$ & $+\S6.05$ & $+0.247$ & $-0.059$ & $-0.073$ & $+0.319$ & $-\S0.003$ \cr
-$0.0664\S\S$ & $0.0685\S\S$ & $0.0675\S\S$ & $\S139.\S\S$ & $\S\S2.37$ & $\S5.82$ & $+\S5.81$ & $+0.243$ & $-0.063$ & $-0.079$ & $+0.323$ & $-\S0.003$ \cr
+$0.0664\S\S$ & $0.0685\S\S$ & $0.0675\S\S$ & $\S139.\S\S$ & $\S\S2.38$ & $\S5.82$ & $+\S5.81$ & $+0.243$ & $-0.063$ & $-0.079$ & $+0.323$ & $-\S0.003$ \cr
 $0.0685\S\S$ & $0.0706\S\S$ & $0.0695\S\S$ & $\S134.\S\S$ & $\S\S2.33$ & $\S5.59$ & $+\S5.58$ & $+0.238$ & $-0.068$ & $-0.087$ & $+0.328$ & $-\S0.003$ \cr
 $0.0706\S\S$ & $0.0727\S\S$ & $0.0717\S\S$ & $\S123.\S\S$ & $\S\S2.22$ & $\S5.37$ & $+\S5.35$ & $+0.234$ & $-0.072$ & $-0.094$ & $+0.332$ & $-\S0.003$ \cr
 $0.0727\S\S$ & $0.0749\S\S$ & $0.0738\S\S$ & $\S124.\S\S$ & $\S\S2.22$ & $\S5.15$ & $+\S5.13$ & $+0.229$ & $-0.076$ & $-0.101$ & $+0.335$ & $-\S0.002$ \cr
 $0.0749\S\S$ & $0.0771\S\S$ & $0.0760\S\S$ & $\S117.\S\S$ & $\S\S2.15$ & $\S4.94$ & $+\S4.92$ & $+0.223$ & $-0.079$ & $-0.105$ & $+0.335$ & $-\S0.002$ \cr
 $0.0771\S\S$ & $0.0793\S\S$ & $0.0782\S\S$ & $\S113.\S\S$ & $\S\S2.10$ & $\S4.73$ & $+\S4.71$ & $+0.218$ & $-0.082$ & $-0.110$ & $+0.335$ & $-\S0.002$ \cr
-$0.0793\S\S$ & $0.0816\S\S$ & $0.0805\S\S$ & $\S106.\S\S$ & $\S\S2.03$ & $\S4.53$ & $+\S4.50$ & $+0.212$ & $-0.085$ & $-0.115$ & $+0.334$ & $-\S0.002$ \cr
+$0.0793\S\S$ & $0.0816\S\S$ & $0.0805\S\S$ & $\S106.\S\S$ & $\S\S2.03$ & $\S4.53$ & $+\S4.51$ & $+0.212$ & $-0.085$ & $-0.115$ & $+0.334$ & $-\S0.002$ \cr
 $0.0816\S\S$ & $0.0839\S\S$ & $0.0827\S\S$ & $\S103.\S\S$ & $\S\S1.99$ & $\S4.34$ & $+\S4.32$ & $+0.206$ & $-0.088$ & $-0.119$ & $+0.333$ & $-\S0.002$ \cr
 $0.0839\S\S$ & $0.0862\S\S$ & $0.0851\S\S$ & $\S\S99.3\S$ & $\S\S1.95$ & $\S4.15$ & $+\S4.13$ & $+0.200$ & $-0.090$ & $-0.122$ & $+0.331$ & $-\S0.002$ \cr
-$0.0862\S\S$ & $0.0885\S\S$ & $0.0874\S\S$ & $\S\S94.3\S$ & $\S\S1.89$ & $\S3.97$ & $+\S3.95$ & $+0.194$ & $-0.091$ & $-0.125$ & $+0.328$ & $-\S0.002$ \cr
-$0.0885\S\S$ & $0.0919\S\S$ & $0.0898\S\S$ & $\S\S89.8\S$ & $\S\S1.83$ & $\S3.79$ & $+\S3.77$ & $+0.188$ & $-0.093$ & $-0.128$ & $+0.324$ & $-\S0.001$ \cr
-$0.0919\S\S$ & $0.0934\S\S$ & $0.0922\S\S$ & $\S\S87.6\S$ & $\S\S1.80$ & $\S3.62$ & $+\S3.60$ & $+0.182$ & $-0.094$ & $-0.130$ & $+0.320$ & $-\S0.001$ \cr
+$0.0862\S\S$ & $0.0886\S\S$ & $0.0874\S\S$ & $\S\S94.3\S$ & $\S\S1.89$ & $\S3.97$ & $+\S3.95$ & $+0.194$ & $-0.091$ & $-0.125$ & $+0.328$ & $-\S0.002$ \cr
+$0.0886\S\S$ & $0.0910\S\S$ & $0.0898\S\S$ & $\S\S89.8\S$ & $\S\S1.83$ & $\S3.79$ & $+\S3.77$ & $+0.188$ & $-0.093$ & $-0.128$ & $+0.324$ & $-\S0.001$ \cr
+$0.0910\S\S$ & $0.0934\S\S$ & $0.0922\S\S$ & $\S\S87.6\S$ & $\S\S1.80$ & $\S3.62$ & $+\S3.60$ & $+0.182$ & $-0.094$ & $-0.130$ & $+0.320$ & $-\S0.001$ \cr
 $0.0934\S\S$ & $0.0959\S\S$ & $0.0946\S\S$ & $\S\S81.5\S$ & $\S\S1.73$ & $\S3.46$ & $+\S3.43$ & $+0.176$ & $-0.095$ & $-0.131$ & $+0.315$ & $-\S0.001$ \cr
-$0.0959\S\S$ & $0.0982\S\S$ & $0.0971\S\S$ & $\S\S77.0\S$ & $\S\S1.68$ & $\S3.30$ & $+\S3.28$ & $+0.169$ & $-0.095$ & $-0.133$ & $+0.310$ & $-\S0.001$ \cr
-$0.0982\S\S$ & $0.101\S\S\S$ & $0.0996\S\S$ & $\S\S75.2\S$ & $\S\S1.65$ & $\S3.15$ & $+\S3.12$ & $+0.163$ & $-0.096$ & $-0.133$ & $+0.305$ & $-\S0.000$ \cr
-$0.101\S\S\S$ & $0.103\S\S\S$ & $0.102\S\S\S$ & $\S\S73.2\S$ & $\S\S1.62$ & $\S3.00$ & $+\S2.97$ & $+0.157$ & $-0.095$ & $-0.133$ & $+0.298$ & $-\S0.000$ \cr
+$0.0959\S\S$ & $0.0983\S\S$ & $0.0971\S\S$ & $\S\S77.0\S$ & $\S\S1.68$ & $\S3.30$ & $+\S3.28$ & $+0.169$ & $-0.095$ & $-0.133$ & $+0.310$ & $-\S0.001$ \cr
+$0.0983\S\S$ & $0.101\S\S\S$ & $0.0996\S\S$ & $\S\S75.2\S$ & $\S\S1.65$ & $\S3.15$ & $+\S3.12$ & $+0.163$ & $-0.096$ & $-0.133$ & $+0.305$ & $-\S0.000$ \cr
+$0.101\S\S\S$ & $0.103\S\S\S$ & $0.102\S\S\S$ & $\S\S73.3\S$ & $\S\S1.62$ & $\S3.00$ & $+\S2.97$ & $+0.157$ & $-0.095$ & $-0.133$ & $+0.298$ & $-\S0.000$ \cr
 $0.103\S\S\S$ & $0.106\S\S\S$ & $0.105\S\S\S$ & $\S\S65.6\S$ & $\S\S1.54$ & $\S2.86$ & $+\S2.83$ & $+0.169$ & $-0.096$ & $-0.134$ & $+0.281$ & $+\S0.000$ \cr
 $0.106\S\S\S$ & $0.109\S\S\S$ & $0.107\S\S\S$ & $\S\S65.5\S$ & $\S\S1.55$ & $\S2.72$ & $+\S2.69$ & $+0.188$ & $-0.097$ & $-0.134$ & $+0.258$ & $+\S0.001$ \cr
 $0.109\S\S\S$ & $0.111\S\S\S$ & $0.110\S\S\S$ & $\S\S59.2\S$ & $\S\S1.49$ & $\S2.59$ & $+\S2.56$ & $+0.205$ & $-0.097$ & $-0.134$ & $+0.237$ & $+\S0.001$ \cr
 $0.111\S\S\S$ & $0.114\S\S\S$ & $0.113\S\S\S$ & $\S\S61.3\S$ & $\S\S1.53$ & $\S2.46$ & $+\S2.43$ & $+0.217$ & $-0.097$ & $-0.132$ & $+0.219$ & $+\S0.001$ \cr
-$0.114\S\S\S$ & $0.117\S\S\S$ & $0.115\S\S\S$ & $\S\S56.2\S$ & $\S\S1.47$ & $\S2.33$ & $+\S2.31$ & $+0.225$ & $-0.097$ & $-0.132$ & $+0.203$ & $+\S0.001$ \cr
+$0.114\S\S\S$ & $0.117\S\S\S$ & $0.115\S\S\S$ & $\S\S56.2\S$ & $\S\S1.47$ & $\S2.34$ & $+\S2.31$ & $+0.225$ & $-0.097$ & $-0.132$ & $+0.203$ & $+\S0.001$ \cr
 $0.117\S\S\S$ & $0.120\S\S\S$ & $0.118\S\S\S$ & $\S\S53.4\S$ & $\S\S1.35$ & $\S2.21$ & $+\S2.19$ & $+0.233$ & $-0.096$ & $-0.130$ & $+0.188$ & $+\S0.001$ \cr
 $0.120\S\S\S$ & $0.123\S\S\S$ & $0.121\S\S\S$ & $\S\S51.6\S$ & $\S\S1.29$ & $\S2.08$ & $+\S2.06$ & $+0.237$ & $-0.095$ & $-0.128$ & $+0.173$ & $+\S0.001$ \cr
-$0.123\S\S\S$ & $0.127\S\S\S$ & $0.125\S\S\S$ & $\S\S47.9\S$ & $\S\S1.10$ & $\S1.95$ & $+\S1.92$ & $+0.241$ & $-0.094$ & $-0.127$ & $+0.159$ & $+\S0.001$ \cr
+$0.123\S\S\S$ & $0.127\S\S\S$ & $0.125\S\S\S$ & $\S\S47.9\S$ & $\S\S1.20$ & $\S1.95$ & $+\S1.92$ & $+0.241$ & $-0.094$ & $-0.127$ & $+0.159$ & $+\S0.001$ \cr
 $0.127\S\S\S$ & $0.131\S\S\S$ & $0.129\S\S\S$ & $\S\S42.0\S$ & $\S\S1.08$ & $\S1.81$ & $+\S1.78$ & $+0.242$ & $-0.092$ & $-0.124$ & $+0.145$ & $+\S0.000$ \cr
 $0.131\S\S\S$ & $0.136\S\S\S$ & $0.133\S\S\S$ & $\S\S39.9\S$ & $\S\S1.01$ & $\S1.67$ & $+\S1.64$ & $+0.241$ & $-0.090$ & $-0.120$ & $+0.131$ & $+\S0.001$ \cr
 $0.136\S\S\S$ & $0.141\S\S\S$ & $0.138\S\S\S$ & $\S\S34.8\S$ & $\S\S0.90$ & $\S1.53$ & $+\S1.49$ & $+0.238$ & $-0.087$ & $-0.116$ & $+0.118$ & $+\S0.001$ \cr
-$0.141\S\S\S$ & $0.147\S\S\S$ & $0.144\S\S\S$ & $\S\S32.8\S$ & $\S\S0.83$ & $\S1.38$ & $+\S1.34$ & $+0.232$ & $-0.084$ & $-0.112$ & $+0.104$ & $+\S0.001$ \cr
-$0.147\S\S\S$ & $0.154\S\S\S$ & $0.150\S\S\S$ & $\S\S28.9\S$ & $\S\S0.73$ & $\S1.22$ & $+\S1.18$ & $+0.224$ & $-0.079$ & $-0.106$ & $+0.090$ & $+\S0.000$ \cr
+$0.141\S\S\S$ & $0.147\S\S\S$ & $0.144\S\S\S$ & $\S\S32.9\S$ & $\S\S0.83$ & $\S1.38$ & $+\S1.34$ & $+0.232$ & $-0.084$ & $-0.112$ & $+0.104$ & $+\S0.001$ \cr
+$0.147\S\S\S$ & $0.154\S\S\S$ & $0.150\S\S\S$ & $\S\S28.9\S$ & $\S\S0.73$ & $\S1.22$ & $+\S1.19$ & $+0.224$ & $-0.079$ & $-0.106$ & $+0.090$ & $+\S0.000$ \cr
 $0.154\S\S\S$ & $0.162\S\S\S$ & $0.158\S\S\S$ & $\S\S25.0\S$ & $\S\S0.67$ & $\S1.05$ & $+\S1.02$ & $+0.190$ & $-0.074$ & $-0.099$ & $+0.088$ & $+\S0.000$ \cr
-$0.162\S\S\S$ & $0.172\S\S\S$ & $0.167\S\S\S$ & $\S\S20.9\S$ & $\S\S0.67$ & $\S0.88$ & $+\S0.86$ & $+0.131$ & $-0.065$ & $-0.090$ & $+0.000$ & $+\S0.000$ \cr
+$0.162\S\S\S$ & $0.172\S\S\S$ & $0.167\S\S\S$ & $\S\S20.9\S$ & $\S\S0.67$ & $\S0.88$ & $+\S0.86$ & $+0.131$ & $-0.065$ & $-0.090$ & $+0.010$ & $+\S0.000$ \cr
 $0.172\S\S\S$ & $0.182\S\S\S$ & $0.177\S\S\S$ & $\S\S15.9\S$ & $\S\S0.69$ & $\S0.73$ & $+\S0.71$ & $+0.092$ & $-0.058$ & $-0.081$ & $+0.106$ & $+\S0.000$ \cr
-$0.182\S\S\S$ & $0.192\S\S\S$ & $0.187\S\S\S$ & $\S\S14.0\S$ & $\S\S0.75$ & $\S0.61$ & $+\S0.57$ & $+0.063$ & $-0.051$ & $-0.073$ & $+0.116$ & $+\S0.000$ \cr
+$0.182\S\S\S$ & $0.192\S\S\S$ & $0.187\S\S\S$ & $\S\S14.0\S$ & $\S\S0.75$ & $\S0.61$ & $+\S0.58$ & $+0.063$ & $-0.051$ & $-0.073$ & $+0.116$ & $+\S0.000$ \cr
 $0.192\S\S\S$ & $0.202\S\S\S$ & $0.197\S\S\S$ & $\S\S11.1\S$ & $\S\S0.80$ & $\S0.51$ & $+\S0.48$ & $+0.038$ & $-0.045$ & $-0.065$ & $+0.132$ & $+\S0.000$ \cr
 \hline
 \hline
