--- a/2013/1km paper/elastic_1km_prl.tex
+++ b/2013/1km paper/elastic_1km_prl.tex
@@ -96,7 +96,7 @@ imaginary parts of the forward hadronic elastic amplitude, was determined.
 
 \section{Discussion/Conclusions}
 
-\> here or at the ends of sections 4 and 5 ??
+\> here or before ??
 
 
 %--------------------------------------------------
@@ -105,7 +105,6 @@ imaginary parts of the forward hadronic elastic amplitude, was determined.
 
 \> if any...
 
-\> what data we have and will publish in near future?
 
 
 
