--- a/2014/90m_1km paper/elastic_90m_1km_prl.tex
+++ b/2014/90m_1km paper/elastic_90m_1km_prl.tex
@@ -11,6 +11,7 @@
 \def\ung#1{\quad[{\rm #1}]}
 \def\unt#1{[{\rm #1}]}
 \def\e{{\rm e}}
+\def\I{{\rm i}}
 \def\etal{et al.}
 \def\todo#1{{\bf\color{red} #1}}
 
@@ -71,6 +72,8 @@
 
 \input introduction.tex
 
+\input framework.tex
+
 \input analysis.tex
 
 %--------------------------------------------------
@@ -105,6 +108,57 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 %--------------------------------------------------
 \begin{thebibliography}{99}
 
+
+\bibitem{wy68}
+	\Name{WEST, G. B. and YENNIE, D. R.}
+	%title     = "Coulomb interference in high-energy scattering",
+	\REVIEW{Phys. Rev.}{172}{1968}{1413--1422}
+	%doi       = "10.1103/PhysRev.172.1413",
+
+\bibitem{kl94}
+	\Name{Kundr\' at, V. and Lokaj\' i\v cek, M.}
+	%title     = "High-energy scattering amplitude of unpolarized and charged hadrons",
+	\REVIEW{Z.~Phys.~C}{63}{1994}{619--630}
+	%doi       = "10.1007/BF01557628",
+
+\bibitem{prl111}
+	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
+	\REVIEW{Phys.~Rev.~Lett.}{111}{2013}{012001}
+
+\bibitem{bailly87}
+	%title={An impact parameter analysis of proton-proton elastic and inelastic interactions at 360 GeV/c}
+	\Name{Bailly, J.L.~\etal{}(EHS-RCBC Collaboration)}
+	\REVIEW{Z.~Phys.~C}{37}{1987}{7--16}
+	%url={http://dx.doi.org/10.1007/BF01442063}
+
+\bibitem{puckett10}
+	\Name{PUCKETT, A. J. R.~\etal{}(GEp-III Collaboration)}
+	Final Results of the GEp-III Experiment and the Status of the Proton Form Factors,
+	arXiv:nucl-ex/1008.0855 (2010)
+
+\bibitem{block06}
+	\Name{BLOCK, M. M.}
+	%Hadronic forward scattering: Predictions for the Large Hadron Collider and cosmic rays
+	\REVIEW{Phys. Rept.}{436}{2006}{71--215}
+	%doi       = "10.1016/j.physrep.2006.06.003",
+
+\bibitem{jan_thesis}
+	\Name{Ka\v spar J.}
+	PhD Thesis, CERN-THESIS-2011-214, {\tt http://cdsweb.cern.ch/record/1441140}
+
+\bibitem{8tev-90m}
+	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
+	The $8\un{TeV}$, $\beta^* = 90\un{m}$ paper
+
+\end{thebibliography}{99}
+
+\iffalse
+
+\bibitem{epl101-tot}
+	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
+	\REVIEW{Europhys.~Lett.}{101}{2013}{21004}
+
+
 \bibitem{totem-jinst}
     %The TOTEM Experiment at the CERN Large Hadron Collider, JINST 3 S08007, 2008
 	\Name{Anelli G.~\etal{}~(TOTEM Collaboration)}
@@ -123,20 +177,6 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Europhys.~Lett.}{101}{2013}{21003}
 
-\bibitem{epl101-tot}
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{Europhys.~Lett.}{101}{2013}{21004}
-
-\bibitem{prl111}
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{Phys.~Rev.~Lett.}{111}{2013}{012001}
-
-\bibitem{kl94}
-	\Name{Kundr\' at, V. and Lokaj\' i\v cek, M.}
-	%title     = "High-energy scattering amplitude of unpolarized and charged hadrons",
-	\REVIEW{Z.~Phys.}{C63}{1994}{619--630}
-	%doi       = "10.1007/BF01557628",
-
 \bibitem{8tev-90m}
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
 	The $8\un{TeV}$, $\beta^* = 90\un{m}$ paper
@@ -154,20 +194,11 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Int.~J.~Mod.~Phys.~A}{28}{2013}{1330046}
 
-
-\end{thebibliography}{99}
-
-\iffalse
-
 \bibitem{epl95}
     %Proton-proton elastic scattering at the LHC energy of \sqrt{s} = 7 TeV, Europhys. Lett. 95 (2011) 41001,CERN-PH-EP-2011-101 
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Europhys.~Lett.}{95}{2011}{41001}
 
-
-\bibitem{jan_thesis}
-	\Name{Ka\v spar J.}
-	PhD Thesis, CERN-THESIS-2011-214, {\tt http://cdsweb.cern.ch/record/1441140}
 
 \bibitem{mario_ipac_2011}
 	\Name{Deile M.}
