--- a/2014/90m_1km paper/introduction.tex
+++ b/2014/90m_1km paper/introduction.tex
@@ -1,9 +1,7 @@
 \section{Introduction}
+\label{sec:cni_intro}
 
 \> motivation for low-$|t|$ measurement
 \>> why it is important and interesting
 
 \> historical context, previous measurements
-
-\> theoretical understanding
-\>> introduce several models/frameworks, details in section \ref{sec:cni}.
