--- a/2013/1km paper/introduction.tex
+++ b/2013/1km paper/introduction.tex
@@ -5,5 +5,4 @@
 
 \> historical context, previous measurements
 
-\> theoretical understanding
-\>> introduce several models/frameworks, details in section \ref{sec:cni}.
+\> explain structure: first 1000m measurement, then CNI analysis (where also 90m data will be used)
